@@ -1,3 +1,15 @@
+2010-03-07  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclTest.c       test that tclOO stubs are present in stub library
+	* generic/tclOOMethod.c   Applied missing part of [Patch 2961556]
+	* win/tclWinInt.h         Change all tclWinProcs signatures to use
+	* win/tclWin32Dll.c       TCHAR* in stead of WCHAR*. This is meant
+	* win/tclWinDde.c         as preparation to make [Enh 2965056]
+	* win/tclWinFCmd.c        possible at all.
+	* win/tclWinFile.c
+	* win/tclWinPipe.c
+	* win/tclWinSock.c
+
 2010-03-06  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclStubLib.c  remove presence of tclTomMathStubsPtr here
